Add rewrite_aaaa.py. Move Dockerfile to centos7. Add links to README.md

--- a/unbound.conf
+++ b/unbound.conf
@@ -7,19 +7,27 @@
 #
 # The following line includes additional configuration files from the
 # /etc/unbound/unbound.conf.d directory.
-include: "/etc/unbound/unbound.conf.d/*.conf"
+# include: "/etc/unbound/conf.d/*.conf"
 
 server:
 	interface: 0.0.0.0
 	verbosity: 2
+	use-syslog: no
+	logfile: ""
 	module-config: "python validator iterator"
 	val-log-level: 1
+	chroot: ""
+	do-ip6: no # stops unbound from sending or receiving DNS queries over IPv6.
+	           # It does not stop unbound from talking about DNS IPv6 (AAAA) records over IPv4.
+
+	access-control: 0.0.0.0/0 allow
 
 forward-zone:
         name: "."
         forward-addr: 1.1.1.1
         forward-addr: 9.9.9.9
+        forward-addr: 8.8.8.8
 
 python:
         # Script file to load
-        python-script: "/etc/unbound/rewrite_ip.py"
+        python-script: "/etc/unbound/rewrite_aaaa.py"
