--- a/unbound.conf
+++ b/unbound.conf
@@ -11,12 +11,20 @@
 
 server:
 	interface: 0.0.0.0
+	num-threads: 4
+	so-reuseport: yes
+	so-rcvbuf: 4m
+	so-sndbuf: 4m
+
 	verbosity: 2
 	use-syslog: no
 	logfile: ""
 	module-config: "python validator iterator"
 	val-log-level: 1
 	chroot: ""
+	rrset-cache-size: 64m
+	msg-cache-size: 64m
+	serve-expired: yes
 	do-ip6: no # stops unbound from sending or receiving DNS queries over IPv6.
 	           # It does not stop unbound from talking about DNS IPv6 (AAAA) records over IPv4.
 
